# PyFlyt

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  FixedWing_Demo.py  MANIFEST.in  Session.vim  drone_controller.py  pyproject.toml  readme.md  requirements.txt  setup.py  simple_test.py  swarm_controller.py  swarm_sync_test.py  swarm_test.py
.github/: pre-commit.yml
.github/workflows/: build-publish.yaml  build-publish.yml  documentation.yml  linux-test.yml  pre-commit.yml
PyFlyt/: __init__.py
PyFlyt/core/: __init__.py  abstractions.py  aviary.py  drone.py  helpers.py  load_objs.py  pid.py
PyFlyt/crazyflie/: __init__.py  drone_controller.py  simulator.py  swarm_controller.py
PyFlyt/environments/: __init__.py  advanced_gates.py  boilerplate.py  simple_hover.py  simple_waypoint.py  uav_chaser.py
PyFlyt/gym_envs/: FWTargets.py  __init__.py  advanced_gates.py  fixedwing_base_env.py  fixedwing_waypoints_env.py  pyflyt_base_env.py  pyflyt_env.py  quadx_base_env.py  quadx_gates_env.py  quadx_hover_env.py  quadx_waypoints_env.py  simple_hover.py  simple_waypoint.py  waypoint_handler.py
PyFlyt/hardware/: simulator.py  swarm_controller.py
PyFlyt/models/: ball_and_string.urdf  cup.urdf  landing_pad.urdf  pole.urdf  race_gate.urdf  target.urdf
PyFlyt/pz_envs/: __init__.py  ma_hover_env.py  ma_quadx_hover_env.py
PyFlyt/utils/: __init__.py  checks.py  utils.py
docs/: .buildinfo  CNAME  core.html  documentation.html  genindex.html  gym_envs.html  index.html  objects.inv  paper.html  readme.html  search.html  searchindex.js  tutorials.html
docs/_sources/: core.md  documentation.md.txt  gym_envs.md  index.md.txt  paper.md.txt  readme.md  tutorials.md.txt
docs/core/: abstractions.html  aviary.html  drones.html
docs/doctrees/: environment.pickle
docs/documentation/: core.html  gym_envs.html  pz_envs.html
docs/gym_envs/: fixedwing.html  fixedwing_envs.html  quadx.html  quadx_envs.html  rocket.html  rocket_envs.html
docs/introduction/: intro.html
docs/source/: conf.py
docs_source/: Makefile  build_docs.sh  build_html.sh  conf.py  documentation.md  gym_envs.md  index.md  requirements.txt  tutorials.md
docs_source/core/: abstractions.md  aviary.md
docs_source/documentation/: core.md  gym_envs.md  pz_envs.md
docs_source/gym_envs/: quadx.md
docs_source/source/: conf.py
examples/: car.urdf  cloud_test.py  fly_single.py  fly_swarm.py  show_obj.py  sim_cube.py  sim_cube_from_scratch.py  sim_n_fly_cube_from_scratch.py  sim_n_fly_multiple.py  sim_n_fly_single.py  sim_single.py  sim_swarm.py  simulate_cloud.py  simulate_cube.py  simulate_single.py  simulate_swarm.py  single_crazyflie.py  single_crazyflie_test.py  swarm_crazyflie.py  swarm_crazyflie_test.py  test.py  yaw_check.py
examples/aviary/: 01_single_drone.py  02_multi_drone.py  03_control.py  04_camera.py  05_custom_controller.py  06_spawning_objects.py  07_custom_uav_model.py
examples/core/: 01_single_drone.py  01_single_drone_NED_FRD.py  02_multi_drone.py  02_multi_drone_NED_FRD.py  03_control.py  03_control_NED_FRD.py  04_camera.py  05_custom_controller.py  06_spawning_objects.py  07_custom_uav.py  07_custom_uav_model.py  08_mixed_drones.py  09_simple_wind.py  10_custom_wind.py  FixedWing_Demo.py  FixedWing_RLSandBox.py  makeGif.py
examples/crazyflie/: fly_single.py  fly_swarm.py  sim_cube.py  sim_n_fly_cube_from_scratch.py  sim_n_fly_multiple.py  sim_n_fly_single.py  sim_single.py  sim_swarm.py
experiments/: cloud_test.py  cube_scratch.py  single_circle.py  single_crazyflie_circle.py  two_hover.py
models/rails/: rail_straight.obj.mtl  rail_switch_right.obj.mtl  readme.txt
models/vehicles/: hector.urdf
pybullet_swarming/ai/: DDQN.py  SAC.py  UASAC.py  UASACNet.py  VQVAE.py  helpers.py  neural_blocks.py  normal_inverse_gamma.py  replay_buffer.py
pybullet_swarming/common/: PID.py
pybullet_swarming/core/: aviary.py  drone.py
src/: cloud.py  control_check.py  demo.py  mainSAC.py  settings.yaml  setup.py  test_uav_chaser.py
temp/: .buildinfo  genindex.html  index.html  objects.inv  searchindex.js
tests/: custom_uavs  runner.sh  test_core.py  test_gym_envs.py  test_pz_envs.py
(+272 files in other folders)
